--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
